--- a/Client/index.html
+++ b/Client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="dark:bg-[#242526]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
