--- a/Client/index.html
+++ b/Client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Proxima+Nova:400,700">
     <title>Vite + React</title>
   </head>
   <body class="dark:bg-[#242526]">
