ui changes of login page and profile page

--- a/Client/index.html
+++ b/Client/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Proxima+Nova:400,700">
+    <link rel="stylesheet" href="./src/Animation.css">
+    <link rel="stylesheet" href="./src/form.css">
     <title>Vite + React</title>
 </head>
 
